mozglue/baseprofiler/lul/LulElf.cpp
@@ -55,6 +55,7 @@
 #include <unistd.h>
 #include <arpa/inet.h>
 
+#include <cstdlib>
 #include <set>
 #include <string>
 #include <vector>
